--- a/Backend/views/receiving.handlebars
+++ b/Backend/views/receiving.handlebars
@@ -48,12 +48,12 @@ div {
 
       <form onSubmit={changeonClick}  encType='multipart/form-data'>
               <div className="form-group mb-3">  
-                <label>Agent ID : </label>
+                <label>Order ID : </label>
                 <input  type="text"
                     required
                     disabled
                     className="input"
-                    value={{agentId}}
+                    value={{orderId}}
                     
                     
                     
@@ -62,13 +62,13 @@ div {
               </div>
 
               <div className="form-group mb-3"> 
-                <label>Agent Name : </label>
+                <label>Shipped Date </label>
                 <input  type="text"
                     required
                     disabled
                     className="form-control"
-                    value={{agentName}}
-                    placeholder={{agentName}}
+                    value={{shippedDate}}
+            
                 
             
                     />
@@ -76,12 +76,12 @@ div {
               </div>
 
               <div className="form-group mb-3"> 
-          <label>Agent Company</label>
+          <label>HS Code</label>
                      <input  type="text"
                     required
                     className="form-control"
-                    value={{Company}}
-                    placeholder={{Company}}
+                    value={{hsCode}}
+                    placeholder={{hsCode}}
                 
             
                     />
@@ -89,12 +89,12 @@ div {
 
             
               <div className="form-group mb-3"> 
-                <label>Email </label>
+                <label>deliveryOrder </label>
                 <input  type="text"
                     required
                     disabled
                     className="form-control"
-                    value={{email}}
+                    value={{deliveryOrder}}
                     
                     
             
@@ -103,17 +103,16 @@ div {
               </div>
             
               <div className="form-group mb-3"> 
-                <label>Mobile </label>
-                <input  type="text"
-                    required
-                    disabled
-                    className="form-control"
-                    value={{mobile}}
-                    placeholder={{mobile}}
-                
-            
-                    />
-            
+                <label>delivery Order </label>
+            <img src="/frontend/public/images/Delivery-order-form-1.jpg
+            ">
+        
+              </div>
+
+             <label>BL </label>
+            <img src="/frontend/public/receivings/Delivery-order-form-1.jpg
+            ">
+        
               </div>
            
 
